Remove obsolete fetch endpoint.
